apps/namespaces/gotify-system/gotify/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: gotify
  type: ClusterIP
