apps/namespaces/gotify-system/gotify/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotify
  namespace: gotify-system
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - gotify.home
  rules:
    - backendRefs:
        - name: gotify
          port: 80
