apps/namespaces/gotify-system/gotify/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
spec:
  rules:
    - host: gotify.home
      http:
        paths:
          - backend:
              service:
                name: gotify
                port:
                  number: 80
            path: /
            pathType: Prefix
